# alas

./: Cargo.toml  README.md
alas/: Cargo.toml
alas/src/: config.rs  error.rs  jobs.rs  lib.rs  main.rs  messages.rs  note.rs
alas/templates/anki/: minimal_back.txt  minimal_front.txt
alas/templates/latex/: skeleton.tex
alas/templates/project_dir/: lec_01.tex  main.tex
anki-db/: Cargo.toml
anki-db/sql/: add_deck.sql  get_deck.sql  get_deckconfig.sql  get_note.sql  get_notetype.sql  update_notetype.sql
anki-db/src/: card.rs  deck.rs  deckconfig.rs  error.rs  grave.rs  lib.rs  note.rs  notetype.rs  text.rs
anki-db/templates/: notetype_css.txt
anki-lib/io/: Cargo.toml
anki-lib/proto/: Cargo.toml
anki-lib/proto_gen/: Cargo.toml
proto/anki/: generic.proto
