[package]
name = "anki_proto"
version = "0.0.0"
authors = ["Ankitects Pty Ltd and contributors <https://help.ankiweb.net>"]
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.80"
description = "Anki's Rust library protobuf code"

[build-dependencies]
anki_io.workspace = true
anki_proto_gen.workspace = true
anyhow.workspace = true
inflections.workspace = true
itertools.workspace = true
prost-build.workspace = true
prost-reflect.workspace = true
prost-types.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
